--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -38,18 +38,22 @@
     "rxjs": "^7.5.4",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
+    "uuid": "^8.3.2",
     "webpack": "^5.68.0",
+    "ws": "^8.5.0",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
+    "@types/ws": "^8.5.1",
     "@types/express": "^4.17.13",
     "@types/figlet": "^1.5.4",
     "@types/node": "^17.0.17",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "@types/rx": "^4.1.2",
+    "@types/uuid": "^8.3.4",
     "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11"
+    "@typescript-eslint/parser": "^5.11.0"
   }
 }
