--- a/projects/cli/package.json
+++ b/projects/cli/package.json
@@ -10,7 +10,8 @@
     "*.map"
   ],
   "scripts": {
-    "build": "npx webpack --config webpack.config.js && node ../../scripts/write-version.js"
+    "build-webpack": "npx webpack --config webpack.config.js && node ../../scripts/write-version.js ./build/version.json",
+    "build": "tsc && node ../../scripts/copy bin build && node ../../scripts/write-version.js ./build/version.json"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "figlet": "^1.5.2",
     "fs": "0.0.1-security",
     "html-webpack-plugin": "^5.5.0",
+    "mustache": "^4.2.0",
     "rxjs": "^7.5.4",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.6",
