--- a/projects/publish_config/package.json
+++ b/projects/publish_config/package.json
@@ -1,13 +1,14 @@
 {
   "name": "frakas",
-  "version": "1.0.12",
+  "version": "1.0.68",
   "description": "Frakas the multiplayer framework",
   "main": "app.js",
   "types": "app.d.ts",
   "files": [
     "*.js",
     "*.ts",
-    "*.map"
+    "*.map",
+    "version.json"
   ],
   "repository": {
     "type": "git",
@@ -37,7 +38,9 @@
     "typescript": "^4.5.5",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
-    "yargs": "^17.3.1"
+    "yargs": "^17.3.1",
+    "ws": "^8.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
