--- a/projects/cli/package.json
+++ b/projects/cli/package.json
@@ -42,7 +42,9 @@
     "typescript": "^4.5.5",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
-    "yargs": "^17.3.1"
+    "yargs": "^17.3.1",
+    "webpack-node-externals": "^3.0.0",
+    "source-map-loader": "^3.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -51,7 +53,7 @@
     "@types/rx": "^4.1.2",
     "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "webpack-node-externals": "^3.0.0"
+    "@typescript-eslint/parser": "^5.11.0"
+    
   }
 }
