--- a/projects/publish_config/package.json
+++ b/projects/publish_config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frakas",
-  "version": "1.0.68",
+  "version": "1.0.96",
   "description": "Frakas the multiplayer framework",
   "main": "app.js",
   "types": "app.d.ts",
@@ -8,6 +8,9 @@
     "*.js",
     "*.ts",
     "*.map",
+    "**/*.js",
+    "**/*.ts",
+    "**/*.map",
     "version.json"
   ],
   "repository": {
@@ -26,21 +29,24 @@
   "homepage": "https://github.com/teamhitori/frakas#readme",
   "dependencies": {
     "chalk": "^4.1.2",
-    "copy-webpack-plugin": "^10.2.4",
     "eslint": "^8.8.0",
     "express": "^4.17.2",
     "figlet": "^1.5.2",
     "fs": "0.0.1-security",
-    "html-webpack-plugin": "^5.5.0",
     "rxjs": "^7.5.4",
-    "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
+    "uuid": "^8.3.2",
     "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2",
-    "yargs": "^17.3.1",
     "ws": "^8.5.0",
-    "uuid": "^8.3.2"
+    "yargs": "^17.3.1",
+    "copy-webpack-plugin": "^10.2.4",
+    "html-webpack-plugin": "^5.5.0",
+    "mustache": "^4.2.0",
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-node-externals": "^3.0.0",
+    "source-map-loader": "^3.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -49,7 +55,6 @@
     "@types/rx": "^4.1.2",
     "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "webpack-node-externals": "^3.0.0"
+    "@typescript-eslint/parser": "^5.11.0"
   }
 }
