--- a/projects/cli/package.json
+++ b/projects/cli/package.json
@@ -35,25 +35,27 @@
     "figlet": "^1.5.2",
     "fs": "0.0.1-security",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "mustache": "^4.2.0",
     "rxjs": "^7.5.4",
+    "source-map-loader": "^3.0.1",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
+    "uuid": "^8.3.2",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
-    "yargs": "^17.3.1",
     "webpack-node-externals": "^3.0.0",
-    "source-map-loader": "^3.0.1"
+    "yargs": "^17.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/figlet": "^1.5.4",
     "@types/node": "^17.0.17",
     "@types/rx": "^4.1.2",
+    "@types/uuid": "^8.3.4",
     "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0"
-    
   }
 }
