--- a/projects/publish_config/package.json
+++ b/projects/publish_config/package.json
@@ -1,13 +1,15 @@
 {
   "name": "frakas",
-  "version": "1.0.96",
+  "version": "1.0.166",
   "description": "Frakas the multiplayer framework",
   "main": "app.js",
   "types": "app.d.ts",
   "files": [
+    "*.css",
     "*.js",
     "*.ts",
     "*.map",
+    "**/*.css",
     "**/*.js",
     "**/*.ts",
     "**/*.map",
@@ -46,7 +48,13 @@
     "terser-webpack-plugin": "^5.3.1",
     "webpack-cli": "^4.9.2",
     "webpack-node-externals": "^3.0.0",
-    "source-map-loader": "^3.0.1"
+    "source-map-loader": "^3.0.1",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.1.3",
+    "bufferutil": "^4.0.6",
+    "utf-8-validate": "^5.0.8",
+    "mini-css-extract-plugin": "^2.6.0",
+    "@popperjs/core": "^2.11.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -55,6 +63,7 @@
     "@types/rx": "^4.1.2",
     "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0"
+    "@typescript-eslint/parser": "^5.11.0",
+    "@popperjs/core": "^2.11.2"
   }
 }
