--- a/projects/cli/package.json
+++ b/projects/cli/package.json
@@ -28,15 +28,21 @@
   },
   "homepage": "https://github.com/teamhitori/frakas#readme",
   "dependencies": {
+    "@azure/msal-node": "^1.7.0",
+    "@azure/msal-node-extensions": "^1.0.0-alpha.15",
+    "axios": "^0.26.1",
     "chalk": "^4.1.2",
     "copy-webpack-plugin": "^10.2.4",
     "eslint": "^8.8.0",
     "express": "^4.17.2",
+    "fast-glob": "^3.2.11",
     "figlet": "^1.5.2",
     "fs": "0.0.1-security",
+    "globby": "^13.1.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "mustache": "^4.2.0",
+    "open": "^8.4.0",
     "rxjs": "^7.5.4",
     "source-map-loader": "^3.0.1",
     "terser-webpack-plugin": "^5.3.1",
@@ -52,6 +58,8 @@
     "@types/express": "^4.17.13",
     "@types/figlet": "^1.5.4",
     "@types/node": "^17.0.17",
+    "@types/passport": "^1.0.7",
+    "@types/passport-azure-ad": "^4.3.1",
     "@types/rx": "^4.1.2",
     "@types/uuid": "^8.3.4",
     "@types/yargs": "^17.0.8",
