--- a/projects/publish_config/package.json
+++ b/projects/publish_config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frakas",
-  "version": "1.0.166",
+  "version": "1.0.179",
   "description": "Frakas the multiplayer framework",
   "main": "app.js",
   "types": "app.d.ts",
@@ -54,7 +54,13 @@
     "bufferutil": "^4.0.6",
     "utf-8-validate": "^5.0.8",
     "mini-css-extract-plugin": "^2.6.0",
-    "@popperjs/core": "^2.11.2"
+    "@popperjs/core": "^2.11.2",
+    "@azure/msal-node": "^1.7.0",
+    "@azure/msal-node-extensions": "^1.0.0-alpha.15",
+    "axios": "^0.26.1",
+    "fast-glob": "^3.2.11",
+    "globby": "^13.1.1",
+    "open": "^8.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
