--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -34,18 +34,20 @@
     "bootstrap": "^5.1.3",
     "bufferutil": "^4.0.6",
     "chalk": "^4.1.2",
+    "css-loader": "^6.7.1",
     "eslint": "^8.8.0",
     "express": "^4.17.2",
     "figlet": "^1.5.2",
     "fs": "0.0.1-security",
+    "html-webpack-plugin": "^5.5.0",
     "rxjs": "^7.5.4",
-    "ts-loader": "^9.2.6",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.8",
     "typescript": "^4.5.5",
     "utf-8-validate": "^5.0.8",
     "uuid": "^8.3.2",
     "webpack": "^5.68.0",
-    "ws": "^8.5.0",
-    "yargs": "^17.3.1"
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -59,6 +61,7 @@
     "@types/ws": "^8.5.1",
     "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0"
+    "@typescript-eslint/parser": "^5.11.0",
+    "webpack-cli": "^4.9.2"
   }
 }
