--- a/projects/cli/package.json
+++ b/projects/cli/package.json
@@ -29,18 +29,22 @@
   "homepage": "https://github.com/teamhitori/frakas#readme",
   "dependencies": {
     "@azure/msal-node": "^1.7.0",
-    "@azure/msal-node-extensions": "^1.0.0-alpha.15",
+    "@azure/msal-node-extensions": "^1.0.0-alpha.16",
     "axios": "^0.26.1",
+    "browserify": "^17.0.0",
     "chalk": "^4.1.2",
     "copy-webpack-plugin": "^10.2.4",
     "eslint": "^8.8.0",
+    "esmify": "^2.1.1",
     "express": "^4.17.2",
     "fast-glob": "^3.2.11",
     "figlet": "^1.5.2",
     "fs": "0.0.1-security",
+    "fs-extra": "^10.1.0",
     "globby": "^13.1.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "mmmagic": "^0.5.3",
     "mustache": "^4.2.0",
     "open": "^8.4.0",
     "rxjs": "^7.5.4",
@@ -55,8 +59,11 @@
     "yargs": "^17.3.1"
   },
   "devDependencies": {
+    "@types/browserify": "^12.0.37",
     "@types/express": "^4.17.13",
     "@types/figlet": "^1.5.4",
+    "@types/fs-extra": "^9.0.13",
+    "@types/mmmagic": "^0.4.30",
     "@types/node": "^17.0.17",
     "@types/passport": "^1.0.7",
     "@types/passport-azure-ad": "^4.3.1",
