--- a/projects/publish_config/package.json
+++ b/projects/publish_config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frakas",
-  "version": "1.0.179",
+  "version": "1.0.279",
   "description": "Frakas the multiplayer framework",
   "main": "app.js",
   "types": "app.d.ts",
@@ -56,11 +56,17 @@
     "mini-css-extract-plugin": "^2.6.0",
     "@popperjs/core": "^2.11.2",
     "@azure/msal-node": "^1.7.0",
-    "@azure/msal-node-extensions": "^1.0.0-alpha.15",
+    "@azure/msal-node-extensions": "^1.0.0-alpha.16",
     "axios": "^0.26.1",
     "fast-glob": "^3.2.11",
     "globby": "^13.1.1",
-    "open": "^8.4.0"
+    "open": "^8.4.0",
+    "mmmagic": "^0.5.3",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
+    "browserify": "^17.0.0",
+    "esmify": "^2.1.1",
+    "fs-extra": "^10.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
