--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "frakas",
-  "version": "1.0.10",
-  "description": "Frakas the multiplayer framework",
-  "main": "app.js",
-  "types": "app.d.ts",
+  "name": "@frakas/api",
+  "version": "0.0.5",
+  "description": "Frakas multiplayer framework API",
   "files": [
     "*.js",
     "*.ts",
-    "*.map"
+    "*.map",
+    "**/*.js",
+    "**/*.ts",
+    "**/*.map"
   ],
   "scripts": {
-    "build": "tsc",
+    "build2": "npx webpack && npx tsc --emitDeclarationOnly --outDir publish",
+    "build": "tsc --outDir publish",
     "debug": "node --inspect=9229 build/app.js",
-    "bump": "node scripts/bump.js",
-    "push": "npm run bump && npm run build && npm publish"
+    "publish": "cd publish && npm publish --access public",
+    "prePublish": "node ../../scripts/prePublish.js",
+    "all": "npm run build && npm run prePublish && npm run publish"
   },
   "repository": {
     "type": "git",
@@ -25,43 +28,27 @@
   "bugs": {
     "url": "https://github.com/teamhitori/frakas/issues"
   },
-  "bin": {
-    "frakas": "bin/frakas"
-  },
   "homepage": "https://github.com/teamhitori/frakas#readme",
   "dependencies": {
-    "@popperjs/core": "^2.11.2",
-    "bootstrap": "^5.1.3",
-    "bufferutil": "^4.0.6",
     "chalk": "^4.1.2",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.8.0",
-    "express": "^4.17.2",
-    "figlet": "^1.5.2",
+    "commander": "^9.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "fs": "0.0.1-security",
-    "html-webpack-plugin": "^5.5.0",
     "rxjs": "^7.5.4",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.8",
-    "typescript": "^4.5.5",
-    "utf-8-validate": "^5.0.8",
     "uuid": "^8.3.2",
-    "webpack": "^5.68.0",
-    "ws": "^8.5.0"
+    "ws": "^8.6.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/figlet": "^1.5.4",
-    "@types/jquery": "^3.5.14",
-    "@types/node": "^17.0.17",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
     "@types/rx": "^4.1.2",
     "@types/uuid": "^8.3.4",
-    "@types/ws": "^8.5.1",
-    "@types/yargs": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
+    "@types/ws": "^8.5.3",
+    "ts-loader": "^9.3.0",
+    "typedoc": "^0.22.15",
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
   }
 }
