--- a/projects/publish_config/package.json
+++ b/projects/publish_config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frakas",
-  "version": "1.0.279",
-  "description": "Frakas the multiplayer framework",
+  "version": "1.0.349",
+  "description": "Frakas - Make it Multiplayer",
   "main": "app.js",
   "types": "app.d.ts",
   "files": [
@@ -25,57 +25,50 @@
   "bugs": {
     "url": "https://github.com/teamhitori/frakas/issues"
   },
+  "browserify-shim": {},
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
   "bin": {
     "frakas": "frakas"
   },
   "homepage": "https://github.com/teamhitori/frakas#readme",
   "dependencies": {
     "chalk": "^4.1.2",
-    "eslint": "^8.8.0",
-    "express": "^4.17.2",
-    "figlet": "^1.5.2",
     "fs": "0.0.1-security",
     "rxjs": "^7.5.4",
-    "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2",
-    "webpack": "^5.68.0",
-    "ws": "^8.5.0",
-    "yargs": "^17.3.1",
-    "copy-webpack-plugin": "^10.2.4",
-    "html-webpack-plugin": "^5.5.0",
-    "mustache": "^4.2.0",
-    "terser-webpack-plugin": "^5.3.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-node-externals": "^3.0.0",
-    "source-map-loader": "^3.0.1",
-    "boostrap": "^2.0.0",
-    "bootstrap": "^5.1.3",
-    "bufferutil": "^4.0.6",
-    "utf-8-validate": "^5.0.8",
-    "mini-css-extract-plugin": "^2.6.0",
-    "@popperjs/core": "^2.11.2",
+    "ws": "^8.6.0",
     "@azure/msal-node": "^1.7.0",
     "@azure/msal-node-extensions": "^1.0.0-alpha.16",
     "axios": "^0.26.1",
-    "fast-glob": "^3.2.11",
-    "globby": "^13.1.1",
-    "open": "^8.4.0",
-    "mmmagic": "^0.5.3",
-    "css-loader": "^6.7.1",
-    "style-loader": "^3.3.1",
     "browserify": "^17.0.0",
     "esmify": "^2.1.1",
-    "fs-extra": "^10.1.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/figlet": "^1.5.4",
-    "@types/node": "^17.0.17",
-    "@types/rx": "^4.1.2",
-    "@types/yargs": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "@popperjs/core": "^2.11.2"
+    "express": "^4.17.2",
+    "fast-glob": "^3.2.11",
+    "figlet": "^1.5.2",
+    "fs-extra": "^10.1.0",
+    "globby": "^13.1.1",
+    "mmmagic": "^0.5.3",
+    "open": "^8.4.0",
+    "yargs": "^17.3.1",
+    "bufferutil": "^4.0.6",
+    "utf-8-validate": "^5.0.9",
+    "browserify-shim": "^3.8.14",
+    "cors": "^2.8.5",
+    "commander": "^9.2.0",
+    "@frakas/api": "^0.0.4",
+    "copy-webpack-plugin": "^11.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "path-browserify": "^1.0.1",
+    "source-map-loader": "^3.0.1",
+    "ts-loader": "^9.3.0",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   }
 }
