--- a/projects/cli/package.json
+++ b/projects/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@frakas/cli",
-  "version": "0.0.56",
+  "version": "0.0.85",
   "description": "Frakas multiplayer framework CLI",
   "main": "app.js",
   "files": [
@@ -43,7 +43,7 @@
   "dependencies": {
     "@azure/msal-node": "^1.7.0",
     "@azure/msal-node-extensions": "^1.0.0-alpha.23",
-    "@frakas/api": "^0.0.13",
+    "@frakas/api": "0.1.3",
     "axios": "^0.26.1",
     "bufferutil": "^4.0.6",
     "chalk": "^4.1.2",
