--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: 16
       - run: npm ci
         working-directory: ./projects/api
-      - run: npm build
+      - run: npm run build
         working-directory: ./projects/api
 
   publish-npm:
